--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -26,7 +26,7 @@
         <item
             android:id="@+id/nav_users"
             android:icon="@drawable/user_icon"
-            android:title="@string/nav_user" />
+            android:title="@string/nav_users" />
         <item
             android:id="@+id/nav_add_to_inventory"
             android:icon="@drawable/add_icon"
