--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Inventory Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+    <ListView
+        android:id="@+id/inventoryList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </RelativeLayout>
