--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -57,9 +57,9 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="364dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="20"
                     android:text="Notifications" />
 
                 <CheckBox
