--- a/app/src/main/res/layout/fragment_user_parameters.xml
+++ b/app/src/main/res/layout/fragment_user_parameters.xml
@@ -16,7 +16,9 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"/>
 
         <Button
             android:id="@+id/name_user_parameters"
@@ -25,7 +27,10 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"
+            />
 
         <Button
             android:id="@+id/label_color_user_parameters"
@@ -34,7 +39,9 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"/>
 
         <Button
             android:id="@+id/dietary_restrictions_user_parameters"
@@ -43,7 +50,9 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"/>
 
         <Button
             android:id="@+id/user_type_user_parameters"
@@ -52,7 +61,9 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"/>
 
         <Button
             android:id="@+id/refrigerator_user_parameters"
@@ -61,7 +72,9 @@
             android:textSize="20sp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"/>
 
 
 
