--- a/app/src/main/res/layout/fragment_add_to_inventory.xml
+++ b/app/src/main/res/layout/fragment_add_to_inventory.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,7 +55,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -70,15 +71,23 @@
                 android:gravity="center"/>
 
             <EditText
+                android:id="@+id/add_to_inventory_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="Item name"/>
             <EditText
+                android:id="@+id/add_to_inventory_owner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="Owner"/>
+            <EditText
+                android:id="@+id/add_to_inventory_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:hint="Amount"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -105,51 +114,20 @@
                 android:layout_gravity="center_horizontal"
                 android:hint="Other"/>
 
-
-
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal"
-            android:layout_marginTop="40dp">
-
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Add New"
-                android:background="@color/colorPrimary"
-                android:layout_margin="3dp"
-                />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Add From Inventory"
-                android:background="@color/colorPrimary"
-                android:layout_margin="3dp"
-                />
-
-
-
-
-
-
-        </LinearLayout>
-
-
-
-
 
 
 
 
     </LinearLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_add_to_inventory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_add_to_inventory"
+        android:background="@color/black"
+        />
 
 
 
