--- a/app/src/main/res/menu/bottom_nav_inventory.xml
+++ b/app/src/main/res/menu/bottom_nav_inventory.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/nav_inventory_edit"
-        android:icon="@drawable/ic_add_plus_white"
+        android:icon="@drawable/ic_edit_white"
         android:title="Edit" />
 
     <item
